rustdocs/errors/rust-bitcoin-bitcoin-src-network-params.rs.txt
error[E0433]: failed to resolve: there are too many leading `super` keywords
  --> ../rust-bitcoin/bitcoin/src/network/params.rs:63:5
   |
63 | use super::{Network, TestnetVersion};
   |     ^^^^^ there are too many leading `super` keywords

error[E0432]: unresolved import `crate::pow`
  --> ../rust-bitcoin/bitcoin/src/network/params.rs:65:12
   |
65 | use crate::pow::CompactTarget;
   |            ^^^ use of unresolved module or unlinked crate `pow`
   |
help: you might be missing a crate named `pow`, add it to your project and import it in your code
   |
63 + extern crate pow;
   |

error[E0432]: unresolved import `crate::pow`
  --> ../rust-bitcoin/bitcoin/src/network/params.rs:66:12
   |
66 | use crate::pow::Target;
   |            ^^^ use of unresolved module or unlinked crate `pow`
   |
help: you might be missing a crate named `pow`, add it to your project and import it in your code
   |
63 + extern crate pow;
   |

error[E0432]: unresolved imports `crate::BlockHeight`, `crate::BlockHeightInterval`
  --> ../rust-bitcoin/bitcoin/src/network/params.rs:67:13
   |
67 | use crate::{BlockHeight, BlockHeightInterval};
   |             ^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^ no `BlockHeightInterval` in the root
   |             |
   |             no `BlockHeight` in the root

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
